--- a/templates/list_test_type.html
+++ b/templates/list_test_type.html
@@ -45,7 +45,7 @@
     <div class="col-xl-12">
         <div class="card">
             <div class="card-body">
-                <h4 class="box-title"> List Customer </h4>
+                <h4 class="box-title"> List Test Type </h4>
             </div>
             <div class="card-body--">
                 <div class="table-stats order-table ov-h">
@@ -54,8 +54,6 @@
                             <tr>
                                 <th class="serial">#</th>
                                 <th>Name</th>
-                                <th>Mobile</th>
-                                <th>Address</th>
                                 <th>Actions</th>
                                 
                             </tr>
@@ -66,23 +64,18 @@
                             <tr>
                                 <td class="serial">{{ forloop.counter }}</td>
                                 <td>{{ i.name }}</td>
-                                <td>{{ i.mobile }}</td>
-                                <td>{{ i.address }}</td>
                                 
                                 <td style="display: flex;
                                 gap: 12px; float: right;">  
 
                                    
                                    
-                                 
-                                   
-                                
-                                   <a href="{% url 'update_customer' i.id %}"> <button id="payment-button"  style="background-color: #05386b; border: green; padding: 10px;border-radius: 12px;" type="submit" class="btn-info ">
+                                   <a href="{% url 'update_test_type' i.id %}"> <button id="payment-button"  style="background-color: #05386b; border: green; padding: 10px;border-radius: 12px;" type="submit" class="btn-info ">
                                         <span id="payment-button-amount">View</span>
                                     </button>  </a>
                                    
                                 
-                                    <a href="{% url 'delete_customer' i.id %}"> <button id="payment-button" onclick="return confirm('Are you sure you want to delete this entry?')" style="background-color: red; border: green; padding: 10px;border-radius: 12px;" type="submit" class="btn-info ">
+                                    <a href="{% url 'delete_test_type' i.id %}"> <button id="payment-button" onclick="return confirm('Are you sure you want to delete this entry?')" style="background-color: red; border: green; padding: 10px;border-radius: 12px;" type="submit" class="btn-info ">
                                         <span id="payment-button-amount">Delete</span>
                                     </button>  </a>
                                    
