--- a/templates/list_customer.html
+++ b/templates/list_customer.html
@@ -7,8 +7,8 @@
 
 <style>
 
-   
-    
+
+
 </style>
 
 {% endblock head %}
@@ -17,7 +17,7 @@
 <div class="breadcrumbs">
     <div class="breadcrumbs-inner">
         <div class="row m-0">
-            
+
             {% comment %} <div class="col-sm-8">
                 <div class="page-header float-right">
                     <div class="page-title">
@@ -39,7 +39,7 @@
     <a href="{% url 'add_godown' %}"> <button id="payment-button" style="background-color: #05386b; border: green; padding: 10px;border-radius: 12px;" type="button" class="btn-info ">
          <span id="payment-button-amount">Add godown  +</span>
      </button> </a>
-   
+
 </div><br> {% endcomment %}
 <div class="row">
     <div class="col-xl-12">
@@ -57,7 +57,7 @@
                                 <th>Mobile</th>
                                 <th>Address</th>
                                 <th>Actions</th>
-                                
+
                             </tr>
                         </thead>
                         <tbody>
@@ -68,30 +68,30 @@
                                 <td>{{ i.name }}</td>
                                 <td>{{ i.mobile }}</td>
                                 <td>{{ i.address }}</td>
-                                
-                                <td style="display: flex;
-                                gap: 12px; float: right;">  
 
-                                   
-                                   
-                                   <a href="{% url 'add_record' i.id %}"> <button id="payment-button"  style="background-color: #05386b; border: green; padding: 10px;border-radius: 12px;" type="submit" class="btn-info ">
+                                <td style="display: flex;
+                                gap: 12px; float: right;">
+
+
+
+                                   <a href="{% url 'add_record' i.id %}"> <button id="payment-button"  style="background-color: #FDDC5C; border: green; padding: 10px;border-radius: 12px;" type="submit" class="btn-info ">
                                         <span id="payment-button-amount">Add Sell</span>
                                     </button>  </a>
-                                   
-                                
+
+
                                    <a href="{% url 'view_customer_with_id' i.id %}"> <button id="payment-button"  style="background-color: #05386b; border: green; padding: 10px;border-radius: 12px;" type="submit" class="btn-info ">
                                         <span id="payment-button-amount">View</span>
                                     </button>  </a>
-                                   
-                                
+
+
                                     <a href="{% url 'delete_customer' i.id %}"> <button id="payment-button" onclick="return confirm('Are you sure you want to delete this entry?')" style="background-color: red; border: green; padding: 10px;border-radius: 12px;" type="submit" class="btn-info ">
                                         <span id="payment-button-amount">Delete</span>
                                     </button>  </a>
-                                   
+
 
                                 </td>
-                               
-                               
+
+
                             </tr>
                             {% endfor %}
                             {% else %}
@@ -104,7 +104,7 @@
         </div> <!-- /.card -->
     </div>  <!-- /.col-lg-8 -->
 
-    
+
 </div>
 {% endblock content %}
 
@@ -122,16 +122,16 @@
         var input = document.createElement('input');
         input.setAttribute('value', text);
         document.body.appendChild(input);
-    
+
         // Select the text
         input.select();
-    
+
         // Copy to clipboard
         document.execCommand('copy');
-    
+
         // Remove the temporary input element
         document.body.removeChild(input);
-    
+
         // Notify the user
         alert('URL copied to clipboard!');
     }
