--- a/templates/list_record.html
+++ b/templates/list_record.html
@@ -121,9 +121,9 @@
                             <tr>
                                 <td class="serial">{{ forloop.counter }}</td>
                                 <td>{{ i.customer.name }}</td>
-                                <td>{{ i.customer.amount }}</td>
-                                <td>{{ i.customer.test_type }}</td>
-                                <td>{{ i.customer.dr }}</td>
+                                <td>{{ i.amount }}</td>
+                                <td>{{ i.test_type }}</td>
+                                <td>{{ i.dr }}</td>
                                 <td>{{ i.customer.mobile }}</td>
                            
                                
